Fix clear button icon alignment by resetting line height and adjusting pseudo-element line height

--- a/packages/ui/src/components/editor/panel/PromptField/PromptField.module.scss
+++ b/packages/ui/src/components/editor/panel/PromptField/PromptField.module.scss
@@ -105,9 +105,11 @@
   cursor: pointer;
   color: var(--vscode-icon-foreground);
   opacity: var(--dimmed-opacity);
+  line-height: 0;
 
   &::before {
     font-size: 13px !important;
+    line-height: 1;
   }
 
   &:hover {
